<resources>
    <string name="app_name">STALK + STOCK</string>
    <string name="maps_api_key" translatable="false">AIzaSyDG3ftTHL_IMGAd8c8vU-q0Oi-oURgTeKE</string>
    <string name="facebook_app_id" translatable="false">150987940516952</string>
    <string name="default_notification_channel_id" translatable="false">Stalk_fcm_default_channel</string>
    <string name="add_or_change_profile_photo_or_logo">Add/Change Profile Photo or Logo</string>
    <string name="email">Email</string>
    <string name="enter_email">Enter your email</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_in">Sign In</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="send_email_to_help">No need to worry, we\'ll send an email to help you reset it.</string>
    <string name="forgot_your_password">Forgot Your Password?</string>
    <string name="enter_your_email_address">Enter your email address</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="name">Name</string>
    <string name="enter_name">Enter your name</string>
    <string name="enter_business_name">Enter the name of your business</string>
    <string name="business_name">Business name</string>
    <string name="enter_mobile">Enter your mobile number</string>
    <string name="mobile">Mobile</string>
    <string name="enter_business_telephone_number">Enter your business telephone number</string>
    <string name="business_telephone_number">Business Telephone Number</string>
    <string name="enter_website">Enter your website address</string>
    <string name="website">Website</string>
    <string name="business_description">Business Description</string>
    <string name="enter_business_description">Enter a brief description of your business</string>
    <string name="business_address">Business Address</string>
    <string name="select_business_type">Select your business type</string>
    <string name="select_delivery_type">Select your Delivery type</string>
    <string name="business_type">Business Type</string>
    <string name="billing_info">Billing Info</string>
    <string name="enter_billing_info">Enter your billing info</string>
    <string name="send">Send</string>
    <string name="notifications">Notifications</string>
    <string name="business_profile">Business Profile</string>
    <string name="manage_payment_methods">Manage Payment Methods</string>
    <string name="manage_payment">Manage Payment</string>
    <string name="change_password">Change Password</string>
    <string name="help">Help</string>
    <string name="logout">Logout</string>
    <string name="you_have_no_ads_at_the_momemt">You have no Ads at the momemt!</string>
    <string name="looks_like_you_have_no_ads">Looks like You have no ads running yet.\nLets get you started</string>
    <string name="create_ad">Create Ad</string>
    <string name="ad_title">Ad Title</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="upload_image_640px_x_360px"><b>Upload Image</b> \nDimensions: 1000px Wide x 360px High \nText &amp; content boundary: 640px Wide x 360 High \n(Please note: any content outside of the 640px width will not display on smaller screens)</string>
    <string name="ad_destination_link">Ad Destination Link</string>
    <string name="daily_advertising_budget">Daily Advertising Budget</string>
    <string name="i_accept_the_stalk_stock_terms_of_service">I accept the Stalk + Stock Terms of Service (including promotion terms) and the Stalk + Stock Advertising Privacy Agreements.</string>
    <string name="preview_ad">Preview Ad</string>
    <string name="update">Update</string>
    <string name="edit_business_profile">Edit Business Profile</string>
    <string name="updated_message2">Your profile has been\nsuccessfully updated!</string>
    <string name="updated_message">Your business profile has been\nsuccessfully updated!</string>
    <string name="dummy_text">Lorem Ipsum Dollar sir amet,Lorem Ipsum Dollar sir amet,Lorem Ipsum Dollar sir amet</string>
    <string name="title">Title</string>
    <string name="content">Content</string>
    <string name="learn_more">Learn More</string>
    <string name="submit">Submit</string>
    <string name="expiry_month">Expiry Month</string>
    <string name="expiry_year">Expiry Year</string>
    <string name="strok" />
    <string name="add_photo">Add Photo</string>
    <string name="resend"><u>Resend OTP?</u></string>
    <string name="save">Save</string>
    <string name="helptext">Nunc a velit quis neque malesuada accumsan eu at erat Ut feugiat necaugue non sollicitudin. Pellentesque volutpat blandit nunc eu aliquet. Phasellus vestibulum malesuada felies Nunc a velit quis neque malesuada accumsaneu at eart. Ut feugiat necaugue non sollicitudin. Pellentesque volutpat blandit nunc eu aliquet. Phasellus vestibulum malesuada felies Nunc a velit quis neque malesuadaaccumsan eu at erat.Ut feugiat necaugue non sollicitudin. Pellentesque volutpat  blandit nunc eu aliquet.Phasellus vestibulum malesuada felies</string>
    <string name="dropdown">Select Category</string>
    <string name="dropdown_vehicle_type">Select Vehicle Type</string>
    <string name="dropdown1">Available</string>
    <string name="thanks"><u>No Thanks</u></string>
    <string name="in_progress">In Progress</string>
    <string name="packed">Packed</string>
    <string name="picked_up">Picked Up</string>
    <string name="completed">Completed</string>
    <string name="documents">Documents</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="current">Current</string>
    <string name="finish_job">Finish Job</string>
    <string name="confirm_bank_account">Confirm Bank Account</string>
    <string name="confirm_bank_account2">Confirm bank account</string>
    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="vehicle_type">Vehicle Type</string>
    <string name="upload_your_driver_s_license">Upload your driver\'s license</string>
    <string name="enter_first_name">Enter your first name</string>
    <string name="enter_last_name">Enter your last name</string>
    <string name="get_started_text">Welcome to </string>
    <string name="get_started_text2"><b> + STOCK</b>,</string>
    <string name="get_started_text3">your virtual</string>
    <string name="get_started_text4">marketplace! Let\'s get started by creating an\naccount that\'s tailored to your needs.\nWhat would you like to do today?</string>
    <string name="purchase_items_household">purchase items for my household</string>
    <string name="purchase_items_in_bulk">purchase items in bulk for my business</string>
    <string name="sell_items_produce">sell items I produce</string>
    <string name="delivery_services_items">offer delivery services for items</string>
    <string name="promote_goods_and_services">promote my goods and services</string>
    <string name="upload_your_registration">Upload your registration</string>
    <string name="look_like_you_do">Looks like you don\'t have any deliveries at the movement. Try again later or widen your range and look out for new notifications.</string>
    <string name="look_like_you_products">Looks like you don\'t have anything available for sale at the moment! Let\'s get you started by adding some products. Tap on the button below.</string>
    <string name="look_like_you_not_request">Looks like you haven\'t placed any orders yet. Let\'s get you going by adding a new request.</string>
    <string name="look_like_your_cart">Looks like you haven\'t started shopping yet. Let\'s get you started!</string>
    <string name="funds_transfer_in_progress">Funds transfer in progress. Please allow 3-5 business days for transfer to be completed.</string>
    <string name="or">OR</string>
    <string name="your_order_picked_up">Your order no <b>8974563251</b> has been be picked up!</string>
    <string name="i_want_to">I want to…</string>
    <string name="enter_vehicle_make">Enter your vehicle make</string>
    <string name="enter_vehicle_model">Enter your vehicle model</string>
    <string name="enter_driver_license_number">Enter your driver\ʼs license number</string>
    <string name="enter_expiration_date">Enter driverʼs license expiration date</string>
    <string name="enter_regi_expiration_date">Enter registration expiration date</string>
    <string name="enter_registration_number">Enter your registration number</string>
    <string name="enter_city">Enter City</string>
    <string name="select_country">Select Country</string>
    <string name="upload_your_proof_of_insurance">Upload Your Proof of Insurance</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="create_your_password">Create your password</string>
    <string name="re_enter_your_password">Re-enter your password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_your_address">Enter your address</string>
    <string name="add_change_profile_photo">Add/Change Profile Photo</string>
    <string name="enter_cardholder_full_name">Enter cardholder\ʼs full name</string>
    <string name="enter_credit_card_number">Enter credit card number</string>
    <string name="enter_your_street_address">Enter your street address</string>
    <string name="enter_your_business_address">Enter your business address</string>
    <string name="enter_unit_apt_suite_floor">Enter Unit/Apt/Suite/Floor</string>
    <string name="state_province_region">State/Province/Region</string>
    <string name="enter_state_province_region">Enter State/Province/Region</string>
    <string name="postal_zipcode">Postal/Zip Code</string>
    <string name="enter_postal_zipcode">Enter Postal/Zip Code (Enter 00000 for addresses without Postal/Zip Code)</string>
    <string name="enter_delivery_instructions">Enter delivery instructions eg. Gate Code: 000</string>
    <string name="enter_your_existing_password">Enter your existing password</string>
    <string name="enter_your_new_password">Enter your new password</string>
    <string name="enter_re_enter_your_new_password">Re-enter your new password</string>
    <string name="insurance_company">Insurance Company</string>
    <string name="enter_your_insurance_provider">Enter your insurance provider</string>
    <string name="insurance_policy">Insurance Policy</string>
    <string name="enter_your_insurance_policy_number">Enter your insurance policy number</string>
    <string name="insurance_valid_through">Insurance Valid Through</string>
    <string name="address">Address</string>
    <string name="address_line2">Address Line 2</string>
    <string name="enter_your_ad_title">Enter your ad title</string>
    <string name="enter_your_ad_destination_link">Enter your ad destination link</string>
    <string name="enter_your_daily_advertising_budget">Enter your daily advertising budget</string>
    <string name="enter_your_ad_description">Enter your ad description</string>
    <string name="business_license">Business License</string>
    <string name="enter_your_business_license_number">Enter your business license number</string>
    <string name="address_line2_optional">Address Line 2 (Optional)</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="edit_update_payment_method">Edit/Update Payment Method</string>
    <string name="license_number">License Number</string>
    <string name="license_number_valid_through">License Number Valid Through</string>
    <string name="registration_number">Registration Number</string>
    <string name="registration_valid_through">Registration Valid Through</string>
    <string name="continue_txt">Continue</string>
</resources>