<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@color/white"
     >
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="fitEnd"
        android:src="@drawable/bg_fit" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal">
        <include layout="@layout/toolbar" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/image"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center"
                android:alpha="0.7"
                android:src="@drawable/camera_green"/>

        </RelativeLayout>

        <com.stalkstock.utils.custom.TitiliumSemiBoldTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_change_profile_photo"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp">

            <com.stalkstock.utils.custom.TitiliumBoldEditText
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_text_bg"
                android:gravity="center_vertical"
                android:hint="@string/enter_name"
                android:imeOptions="actionNext"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:minHeight="45dp"
                android:paddingLeft="15dp"
                android:paddingRight="12dp"
                android:textColor="@color/black"
                android:textColorHint="@color/light_grey"
                android:textSize="13sp" />

            <com.stalkstock.utils.custom.TitiliumBoldTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="45dp"
                android:layout_marginBottom="10dp"
                android:background="@color/white"
                android:text="@string/name"
                android:textColor="@color/light_grey"
                android:textSize="13sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp">

            <com.stalkstock.utils.custom.TitiliumBoldEditText
                android:id="@+id/emailEdittext"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_text_bg"
                android:gravity="center_vertical"
                android:hint="@string/enter_your_email_address"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:minHeight="45dp"
                android:paddingLeft="15dp"
                android:paddingRight="12dp"
                android:textColor="@color/black"
                android:textColorHint="@color/light_grey"
                android:textSize="13sp" />

            <com.stalkstock.utils.custom.TitiliumBoldTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="45dp"
                android:layout_marginBottom="10dp"
                android:background="@color/white"
                android:text="@string/email"
                android:textColor="@color/light_grey"
                android:textSize="13sp" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp">

            <com.stalkstock.utils.custom.TitiliumBoldEditText
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_text_bg"
                android:gravity="center_vertical"
                android:hint="@string/enter_mobile"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:maxLines="1"
                android:minHeight="45dp"
                android:paddingLeft="15dp"
                android:paddingRight="12dp"
                android:textColor="@color/black"
                android:textColorHint="@color/light_grey"
                android:textSize="13sp" />

            <com.stalkstock.utils.custom.TitiliumBoldTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="45dp"
                android:layout_marginBottom="10dp"
                android:background="@color/white"
                android:text="@string/mobile"
                android:textColor="@color/light_grey"
                android:textSize="13sp" />
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:gravity="bottom">
            <com.stalkstock.utils.custom.TitiliumBoldButton
                android:id="@+id/btn_update_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/btn_shape"
                android:gravity="center"
                android:minHeight="45dp"
                android:text="@string/save"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="15sp" />
        </LinearLayout>



    </LinearLayout>

</RelativeLayout>