<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@drawable/bg"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Edit Profile"
            android:layout_centerInParent="true"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/back_arrow"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:padding="10dp"/>

    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/light_grey"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp">
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/image"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:alpha="0.7"
            android:background="@drawable/edit_img" />
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_centerInParent="true"
            android:background="@drawable/img_uploader_ad" />
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Upload Photo"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edit_text_bg"
            android:gravity="center_vertical"
            android:hint="@string/enter_name"
            android:imeOptions="actionNext"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:minHeight="45dp"
            android:paddingLeft="15dp"
            android:paddingRight="12dp"
            android:textColor="@color/black"
            android:textColorHint="@color/light_grey"
            android:textSize="13sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="45dp"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:text="@string/name"
            android:textColor="@color/light_grey"
            android:textSize="13sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp">

        <EditText
            android:id="@+id/emailEdittext"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edit_text_bg"
            android:gravity="center_vertical"
            android:hint="@string/enter_your_email_address"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:minHeight="45dp"
            android:paddingLeft="15dp"
            android:paddingRight="12dp"
            android:textColor="@color/black"
            android:textColorHint="@color/light_grey"
            android:textSize="13sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="45dp"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:text="@string/email"
            android:textColor="@color/light_grey"
            android:textSize="13sp" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edit_text_bg"
            android:gravity="center_vertical"
            android:hint="@string/enter_mobile"
            android:imeOptions="actionNext"
            android:inputType="phone"
            android:maxLines="1"
            android:minHeight="45dp"
            android:paddingLeft="15dp"
            android:paddingRight="12dp"
            android:textColor="@color/black"
            android:textColorHint="@color/light_grey"
            android:textSize="13sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="45dp"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:text="@string/mobile"
            android:textColor="@color/light_grey"
            android:textSize="13sp" />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="bottom">
        <Button
            android:id="@+id/btn_update_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/btn_shape"
            android:gravity="center"
            android:minHeight="45dp"
            android:text="@string/update"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="15sp" />
    </LinearLayout>


</LinearLayout>